tests-system/rbt-tuple-separator-form/output
tu = 1:2@3;4
      ^ rbt-tuple-separator-form/foo.trlc:4: error: expected integer literal, encountered separator ':' instead
Processed 1 model, 0 checks and 1 requirement file and found 1 error
